--- a/MedAid/Pages/Prescriptions/Create.cshtml
+++ b/MedAid/Pages/Prescriptions/Create.cshtml
@@ -1,4 +1,4 @@
-@page
+@* @page
 @model MedAid.Pages_Prescriptions.CreateModel
 
 @{
@@ -52,6 +52,70 @@
                 <input asp-for="Prescription.UpdatedAt" class="form-control" />
                 <span asp-validation-for="Prescription.UpdatedAt" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-page="Index">Back to List</a>
+</div>
+ *@
+
+
+ @page
+@model MedAid.Pages_Prescriptions.CreateModel
+
+@{
+    ViewData["Title"] = "Create Prescription";
+}
+
+<h1>Create Prescription</h1>
+
+<h4>Prescription</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <!-- Dropdown for Patients -->
+            <div class="form-group">
+                <span class="text-danger">*</span>
+                <label asp-for="Prescription.PatientId" class="control-label"></label>
+                <select asp-for="Prescription.PatientId" class="form-control" asp-items="Model.Patients">
+                    <option value="">-- Select a Patient --</option>
+                </select>
+                <span asp-validation-for="Prescription.PatientId" class="text-danger"></span>
+            </div>
+
+            <!-- Dropdown for Medications -->
+            <div class="form-group">
+                <span class="text-danger">*</span>
+                <label asp-for="Prescription.MedicationName" class="control-label"></label>
+                <select asp-for="Prescription.MedicationName" class="form-control" asp-items="Model.Medications">
+                    <option value="">-- Select a Medication --</option>
+                </select>
+                <span asp-validation-for="Prescription.MedicationName" class="text-danger"></span>
+            </div>
+
+            <!-- Dosage -->
+            <div class="form-group">
+                <span class="text-danger">*</span>
+                <label asp-for="Prescription.Dosage" class="control-label"></label>
+                <input asp-for="Prescription.Dosage" class="form-control" />
+                <span asp-validation-for="Prescription.Dosage" class="text-danger"></span>
+            </div>
+
+            <!-- Frequency -->
+            <div class="form-group">
+                <label asp-for="Prescription.Frequency" class="control-label"></label>
+                <input asp-for="Prescription.Frequency" class="form-control" />
+                <span asp-validation-for="Prescription.Frequency" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
