--- a/MedAid/Pages/Shared/_Layout.cshtml.css
+++ b/MedAid/Pages/Shared/_Layout.cshtml.css
@@ -1,7 +1,7 @@
 ﻿/* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
-a.navbar-brand {
+/*a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
@@ -45,4 +45,63 @@ button.accept-policy {
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
+}*/
+/* Navbar styles */
+
+/* Navbar styles */
+
+.navbar-brand {
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
+
+.navbar-light .navbar-brand {
+    color: #0077cc;
+}
+
+    .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
+        color: #0056b3;
+    }
+
+.navbar-light .navbar-nav .nav-link {
+    color: #0077cc;
+}
+
+    .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
+        color: #0056b3;
+    }
+
+.ml-auto {
+    margin-left: auto !important;
+}
+
+.btn-outline-primary {
+    border-color: #0077cc;
+    color: #0077cc;
+}
+
+    .btn-outline-primary:hover {
+        background-color: #0077cc;
+        color: #ffffff;
+    }
+
+.btn-outline-success {
+    border-color: #28a745;
+    color: #28a745;
+}
+
+    .btn-outline-success:hover {
+        background-color: #28a745;
+        color: #ffffff;
+    }
+
+.btn-outline-info {
+    border-color: #17a2b8;
+    color: #17a2b8;
+}
+
+    .btn-outline-info:hover {
+        background-color: #17a2b8;
+        color: #ffffff;
+    }
