--- a/MedAid/wwwroot/css/site.css
+++ b/MedAid/wwwroot/css/site.css
@@ -20,3 +20,18 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.display-4 {
+    font-size: 4.5rem;
+    font-weight: 300;
+}
+
+.lead {
+    font-size: 1.5rem;
+    font-weight: 300;
+}
