--- a/MedAid/Pages/Prescriptions/Index.cshtml
+++ b/MedAid/Pages/Prescriptions/Index.cshtml
@@ -5,71 +5,11 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Patient Prescriptions</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
 </p>
-@* <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Prescription[0].DoctorId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Prescription[0].PatientId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Prescription[0].MedicationName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Prescription[0].Dosage)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Prescription[0].Frequency)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Prescription[0].CreatedAt)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Prescription[0].UpdatedAt)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Prescription) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.DoctorId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PatientId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MedicationName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Dosage)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Frequency)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedAt)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedAt)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table> *@
 <table class="table">
     <thead>
         <tr>
@@ -80,7 +20,7 @@
             <th>Frequency</th>
             <th>Created At</th>
             <th>Updated At</th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -88,10 +28,10 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.DoctorId) <!-- Replace with human-readable -->
+                    @item.DoctorName
                 </td>
                 <td>
-                    @item.Patient?.FirstName ?? "Unknown"
+                    @($"{item.Patient.FirstName} {item.Patient.LastName}")
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.MedicationName)
