Logo changed  , removed ld unused code replace medaid in the navbar with the logo

--- a/MedAid/Pages/Index.cshtml
+++ b/MedAid/Pages/Index.cshtml
@@ -17,8 +17,8 @@
 }
 
 <div class="container mt-5 text-center">
-    <img src="~/images/MedAidLogo.png" alt="MedAid Logo" width="150" height="150" class="mb-4">
-    <h1 class="display-4">MedAid</h1>
+    <img src="~/images/MainLogo.webp" alt="MedAid Logo" width="400" height="400" class="mb-4">
+   @*  <h1 class="display-4">MedAid</h1> *@
     <p class="lead">Your trusted healthcare companion.</p>
 @*     <button class="btn btn-primary btn-lg">Get Started</button>*@
 </div>
